feat(wish): 支持过程记录私有媒体
